src/ui/components/Dashboard/Dashboard.css
main.dashboard {
  display: flex;
  width: 100%;
  overflow: hidden;
  flex-grow: 1;
}

.dashboard-viewer {
  width: 100%;
  font-size: 14px;
  display: flex;
  flex-direction: column;
}

.dashboard-viewer *:focus:not(:focus-visible) {
  outline: none;
  background: inherit;
}

.dashboard-viewer .dashboard-viewer-content {
  overflow: hidden;
}

.dashboard-viewer .dashboard-viewer-content *:focus:not(:focus-visible) {
  overflow: auto;
}

